# RockPulseAPI

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  debugging.md  docker-compose.yml  main.cpp  project1.txt
config/: app_settings.json  docker_settings.json
frontend/: package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/components/: CyberButton.tsx  CyberCard.tsx  Layout.tsx
frontend/src/components/charts/: GranulometryChart.tsx
frontend/src/components/detections/: DetectionViewer.tsx
frontend/src/pages/: Dashboard.tsx  History.tsx
frontend/src/services/: rockpulse.ts
frontend/src/types/: index.ts
include/api/: server.hpp
include/api/handlers/: conveyors_handler.hpp  detections_handler.hpp  granulometry_handler.hpp  health_handler.hpp  location_handler.hpp  tokens_handler.hpp
include/db/: postgres_connector.hpp
include/inference/: metrics_calculator.hpp  metrology.hpp  rock_detector.hpp
include/utils/: image_utils.hpp
scripts/: check_aruco_marker.py  generate_arcuco_marker.py
src/: main.cpp
src/api/: server.cpp
src/api/handlers/: conveyors_handler.cpp  detect_handler.cpp  detections_handler.cpp  granulometry_handler.cpp  health_handler.cpp  location_handler.cpp  tokens_handler.cpp
src/db/: postgres_connector.cpp  schema.sql
src/inference/: metrics_calculator.cpp  metrology.cpp  rock_detector.cpp
src/utils/: image_utils.cpp
